# code-migration-pipeline

./: .gitignore  .gitmodules  README.md  environment.yml  pyproject.toml
config/: demo.yaml
data/: README.md
data/envs/: README.md
data/eval-tests/: README.md
data/helper-tests/: README.md
data/repos/: README.md
data/score/: README.md
data/trajectories/: README.md
infra/: main.py
infra/config/: config.py  pymigbench_config.py
infra/const/: __init__.py  config.py  task.py  token.py
infra/models/: __init__.py  migration.py  repo.py  score.py
infra/pipeline/: config.py  context.py  dag.py  task.py
infra/tasks/: coding_agent.py  env_setup_agent.py  eval_testing_agent.py  helper_testing_agent.py  patch_cmp_eval.py  pymigbench_config.py  repo_dl.py  unit_test_pass_rate_eval.py
notes/: pipeline-design.md  pipeline-impl.md  pipeline.md  testing-agent.md
